--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     // Hier trägst du die Teil-zu-Formular Zuordnung ein
     const urls = {
-      "Schraube_M4": "/Pages/DesignPageV2.aspx?origin=NeoPortalPage&subpage=design&id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&topview=Prefill",
+      "Schraube_M4": "https://forms.office.com/Pages/DesignPageV2.aspx?origin=NeoPortalPage&subpage=design&id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&topview=Prefill",
       "Kabelbinder_200": "https://forms.office.com/e/DEINE_FORMS_ID",
       "Motor_12V": "https://forms.office.com/e/DEINE_FORMS_ID"
     };
@@ -25,4 +25,5 @@
   <p>Wird geladen...</p>
 </body>
 </html>
+
 
