--- a/index.html
+++ b/index.html
@@ -12,7 +12,56 @@
     const urls = {
       "Schraube_M4": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Schraube_M4",
       "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
-      "Motor_12V": "https://forms.office.com/Pages/ResponsePage.aspx?id=DEIN_FORMULAR_LINK_MOTOR"
+      
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      
     };
 
     // Weiterleitung oder Fehleranzeige
@@ -27,6 +76,7 @@
   <p>Wird geladen...</p>
 </body>
 </html>
+
 
 
 
