--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       "Schraube_M4": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Schraube_M4",
       "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
       
-      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
-      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
-      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
-      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
-      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
-      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
-      "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
+      "UWANS10-125-27": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=UWAFS8-125-27",
+      "UWAFS8-125-27": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=UWAFS8-125-27",
+      "USSTEH10": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=USSTEH10",
+      "SCL60C/M": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=SCL60C/M",
+      "S-06-10-N": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=S-06-10-N",
+      "S-06-04-N": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=S-06-04-N",
+      "KEL-E3": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=KEL-E3",
+      
       "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
       "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
       "Kabelbinder_200": "https://forms.office.com/Pages/ResponsePage.aspx?id=rrMGg1nsJkqpck_EDzDmua9daFipiqNBupMMNvtV9T5UNTMzT1lPUVI4Q09DMkoxTEtLUUEzSUNLRy4u&rd0cde48cb66c437aa0be38763e3d6c54=Kabelbinder",
@@ -76,6 +77,7 @@
   <p>Wird geladen...</p>
 </body>
 </html>
+
 
 
 
